--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps,
  [
-  {epgsql,	".*",	{git, "git://github.com/epgsql/epgsql.git",	{branch, "4.6.0"}}},
-  {poolboy,	".*",	{git, "git://github.com/devinus/poolboy.git",	{tag, "1.5.2"}}}
+  {epgsql,	".*",	{git, "https://github.com/epgsql/epgsql.git",	{branch, "4.6.0"}}},
+  {poolboy,	".*",	{git, "https://github.com/devinus/poolboy.git",	{tag, "1.5.2"}}}
  ]}.
